--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,12 +37,24 @@ jobs:
         run: |
           # Extract the source branch from the GitHub event context
           branch_name=$(jq -r .head_commit.message < "$GITHUB_EVENT_PATH" | grep -oP 'Merge pull request #[0-9]+ from \K\S+')
+          echo "Branch name (raw): $branch_name"  # Debug: Print the raw branch name
 
-          # Strip any prefixes from the branch name, keeping only the last part (release/v* or hotfix/*)
-          branch_name=$(basename "$branch_name")
+          # Save the branch name to an environment variable for further steps
+          echo "branch_name=$branch_name" >> $GITHUB_ENV
 
-          echo "Branch name: $branch_name"
-          echo "branch_name=$branch_name" >> $GITHUB_ENV  # Save the source branch to an environment variable
+      # Debug step to see if the branch name matches release or hotfix
+      - name: Debug branch name matching
+        run: |
+          branch_name="${{ env.branch_name }}"
+          echo "Branch name for matching: $branch_name"
+
+          if [[ "$branch_name" == release/v* ]]; then
+            echo "This is a release branch"
+          elif [[ "$branch_name" == hotfix/* ]]; then
+            echo "This is a hotfix branch"
+          else
+            echo "Branch name does not match expected patterns"
+          fi
 
       # Step to determine the next version based on the merged branch
       - name: Determine next version
