--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,14 +71,16 @@ jobs:
         id: generate_release_notes
         run: |
           # Get commit messages since the last release
-          release_notes=$(gh api repos/${{ github.repository }}/compare/${{ env.latest_tag }}...main --jq '.commits[].commit.message' | sed '/^\s*$/d')
-
+          raw_commit_messages=$(gh api repos/${{ github.repository }}/compare/${{ env.latest_tag }}...main --jq '.commits[].commit.message' || echo "No commits found")
+          echo "Raw commit messages:"
+          echo "$raw_commit_messages"
+          
           # Add JIRA ticket links to commit messages
-          jira_pattern='[A-Z]+-[0-9]+'  # JIRA ticket pattern (e.g., PROJ-123)
+          jira_pattern='[A-Za-z0-9]+-[0-9]+'  # Adjusted JIRA ticket pattern
           jira_url="${{ env.JIRA_URL }}"
 
           # Replace JIRA ticket references with Markdown links
-          release_notes=$(echo "$release_notes" | sed -E "s/($jira_pattern)/[\1]($jira_url\1)/g" | sed 's/^/* /')
+          release_notes=$(echo "$raw_commit_messages" | sed -E "s/($jira_pattern)/[\1]($jira_url\1)/g" | sed 's/^/* /')
 
           # Add a title to the release notes and ensure the formatting is correct
           formatted_notes="## Commit History Since Last Release\n\n$release_notes"
@@ -92,6 +94,8 @@ jobs:
       - name: Update GitHub Release with Notes
         run: |
           release_notes=$(cat ${{ env.release_notes_file }})
+          echo "Formatted release notes:"
+          echo "$release_notes"
           gh release edit ${{ env.new_tag }} --notes "$release_notes"
 
       - name: Rebase develop with main for hotfixes
