--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Get branch type
         id: get_branch_type
         run: |
-          branch_name=$(echo "${GITHUB_REF#refs/heads/}")
-          echo "Branch name: $branch_name"
+          branch_name=$(jq -r .head_commit.message < "$GITHUB_EVENT_PATH" | grep -oP 'Merge pull request #[0-9]+ from \K\S+')
+          branch_name=$(echo "$branch_name" | sed 's/^[^/]*\///')
 
           if [[ "$branch_name" == release/* ]]; then
             branch_type="release"
@@ -67,7 +67,7 @@ jobs:
         run: |
           gh release create ${{ env.new_tag }} --title "Release ${{ env.new_tag }}" --target main --notes ""
 
-      - name: Generate and Debug Release Notes
+      - name: Generate formatted release notes
         id: generate_release_notes
         run: |
           # Get commit messages since the last release
@@ -88,8 +88,6 @@ jobs:
           # Ensure newlines are preserved and properly formatted for GitHub release notes
           formatted_notes=$(echo -e "$formatted_notes")
 
-          echo "Formatted release notes:"
-          echo "$formatted_notes"
           echo "${formatted_notes}" > release_notes.txt
           echo "release_notes_file=release_notes.txt" >> $GITHUB_ENV
 
@@ -98,7 +96,7 @@ jobs:
           release_notes=$(cat ${{ env.release_notes_file }})
           echo "Formatted release notes:"
           echo "$release_notes"
-          gh release edit ${{ env.new_tag }} --notes "$release_notes"
+          gh release edit ${{ env.new_tag }} --generate-notes
 
       - name: Rebase develop with main for hotfixes
         if: env.branch_type == 'hotfix'  # Only do this for hotfixes
