--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,26 +27,24 @@ jobs:
           latest_tag=$(gh release list --limit 1 --json tagName --jq '.[0].tagName' || echo "1.0.0")
           echo "latest_tag=$latest_tag" >> $GITHUB_ENV
 
-      - name: Determine branch type
-        id: determine_branch_type
+      - name: Get branch type (based on incoming branch)
+        id: get_branch_type
         run: |
-          echo "GITHUB_REF=$GITHUB_REF"
-          branch_name=${GITHUB_REF#refs/heads/}
-          echo "Branch name: $branch_name"
+          branch_name=$(jq -r .pull_request.head.ref < "$GITHUB_EVENT_PATH")
+          echo "Incoming branch name: $branch_name"
+          
           if [[ "$branch_name" == release/* ]]; then
             branch_type="release"
           elif [[ "$branch_name" == hotfix/* ]]; then
             branch_type="hotfix"
-          elif [[ "$branch_name" == "main" ]]; then
-            branch_type="main"
           else
             echo "Branch does not match expected patterns"
             exit 1
           fi
+
           echo "branch_type=$branch_type" >> $GITHUB_ENV
 
       - name: Increment version
-        if: env.branch_type != 'main'  # Skip version increment for main branch
         id: increment_version
         run: |
           IFS='.' read -r major minor patch <<< "${{ env.latest_tag }}"
@@ -65,13 +63,6 @@ jobs:
           echo "new_tag=$new_tag" >> $GITHUB_ENV
 
       - name: Tag the new version
-        if: env.branch_type != 'main'  # Skip tagging for main branch
-        run: |
-          gh release create ${{ env.new_tag }} --title "Release ${{ env.new_tag }}" --target main
-
-      - name: Generate release notes using GitHub's auto-generated notes
-        if: env.new_tag != ''  # Only run if there's a new tag
-        id: generate_release_notes
         run: |
           gh release create ${{ env.new_tag }} --title "Release ${{ env.new_tag }}" --generate-notes --target main
 
